add all available cards on local shinydb and transliteration

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -79,32 +79,32 @@ Actual Name,Romanized Name
 光の想い出,Hikari no Omoida
 アイ・セーブ・ユー,I Save You
 トリプルイルミネーション,Triple Illumination
-お揃いスナップ,
+お揃いスナップ,Osoroi Snap
 スプラッシュビート,Splash Beat
 はじまりのエピローグ,Hajimari no Epilogue
-冬街イルミネート,
-みんなと結んだもの,
+冬街イルミネート,Fuyumachi Illuminate
+みんなと結んだもの,Minna to Musundamono
 キャプテン★パンプキン,Captain Pumpkin
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
 ゴシックデコレーション,Gothic Decoration
-闇鍋上等,
-指先の煌めき,
+闇鍋上等,Yaminabe Joutou
+指先の煌めき,Yubisaki no Kirameki
 街角フラワーガーデン,Machikado Flower Garden
-等身大のレイニーデイ,
-霧・霧・奇・譚,
+等身大のレイニーデイ,Toushindai no Rainy Day
+霧・霧・奇・譚,Kiri Kiri Ki Tan
 ヒーローインザパーク,Hero in the Park
-鉄板★絶品★海の家,
-放課後★肝試しパニック,
-桜餅マスター……？,
-未知なるFROZEN,Mishinaru FROZEN
+鉄板★絶品★海の家,Teppan Zeppin Umi no Ie
+放課後★肝試しパニック,Houkago Kimodameshi Panic
+桜餅マスター……？,Sakuramochi Master...?
+未知なるFROZEN,Michinaru FROZEN
 ふれんど日和,Furendo Biyori
-熱血指導！,
-遊びも本気で,
+熱血指導！,Nekketsu Shidou!
+遊びも本気で,Asobi mo Honki de
 #ナッツ・チョコジェリー,#Nuts Choco Jelly
 幸せのりんご飴,Shiawase no Ringo Ame
 まだ……寝ないから……,Mada... Nenai kara....
-彩りファッションドール,
-身支度はお任せ☆,
+彩りファッションドール,Irodori Fashion Doll
+身支度はお任せ☆,Mijitaku wa Omakase
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
