add leaked limited card name

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -41,6 +41,7 @@ Actual Name,Romanized Name
 金色の元気いっぱいガール,Kin'iro no Genki Ippai Girl
 夏に恋するピチカート！,Natsu ni Koisuru Pizzikato!
 ばりうまかブルース,Bariumaka Blues
+月の浜辺で待っとって,Tsuki no Hamabe de Mattotte
 トリッキーナイト,Tricky Night
 紺碧のボーダーライン,Konpeki no Borderline
 お試し／みつゴコロ,Otameshi Mitsugokoro
@@ -106,5 +107,6 @@ Actual Name,Romanized Name
 まだ……寝ないから……,Mada... Nenai kara....
 彩りファッションドール,Irodori Fashion Doll
 身支度はお任せ☆,Mijitaku wa Omakase
+かしまし、みっつの願いごと,"Kashimashi, Mittsu no Negaigoto"
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
