--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -1,6 +1,7 @@
 Actual Name,Romanized Name
 白いツバサ,Shiroi Tsubasa
 ナチュラルモード,Natural Mode
+しじまに華ひととき,Shijimani Hana Hitotoki
 ぐうぜんBOOKS,Guuzen BOOKS
 手作りの心遣い,Tedzukuri no Kokorodzukai
 マフラー直して、心は解けて,"Muffler Naoshite, Kokoro wa Tokete"
@@ -45,7 +46,7 @@ Actual Name,Romanized Name
 トリッキーナイト,Tricky Night
 紺碧のボーダーライン,Konpeki no Borderline
 お試し／みつゴコロ,Otameshi Mitsugokoro
-霧・音・燦・燦,Kirine Sansan
+霧・音・燦・燦,Kiri Ne San San
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
 ちょこ色×きらきらロマン,Chocoiro Kirakira Romance
 ラムネ色の覚悟,Ramuneiro no Kakugo
@@ -76,6 +77,7 @@ Actual Name,Romanized Name
 意地っ張りサンセット,Ijippari Sunset
 ３名様極楽旅行記,Sanmeisama Gokuraku Ryokouki
 虹待ちレインドロップ,Nijimachi Raindrop
+紅いろは、白,"Beni Iroha, Shiro"
 秘密のがんばり,Himitsu no Ganbari
 光の想い出,Hikari no Omoida
 アイ・セーブ・ユー,I Save You
@@ -94,6 +96,7 @@ Actual Name,Romanized Name
 街角フラワーガーデン,Machikado Flower Garden
 等身大のレイニーデイ,Toushindai no Rainy Day
 霧・霧・奇・譚,Kiri Kiri Ki Tan
+娘・娘・謹・賀,Jou Jou Kin Ga
 ヒーローインザパーク,Hero in the Park
 鉄板★絶品★海の家,Teppan Zeppin Umi no Ie
 放課後★肝試しパニック,Houkago Kimodameshi Panic
