--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -11,6 +11,7 @@ Actual Name,Romanized Name
 ビ～♡バップ海岸,Bebop Kaigan
 裏腹あまのじゃく,Urahara Amanojaku
 夕つ方まみみチック,Yuutsugata Mamimi Tick
+そのまみみ無気力につき,"Sono Mamimi Mukiryoku ni tsuki"
 秘めやかファンサービス,Himeyaka Fan Service
 ふれあい、おもいあい,"Fureai, Omoiai"
 カラフルメタモルフォーゼ,Colorful Metamorph
@@ -95,6 +96,7 @@ Actual Name,Romanized Name
 指先の煌めき,Yubisaki no Kirameki
 街角フラワーガーデン,Machikado Flower Garden
 等身大のレイニーデイ,Toushindai no Rainy Day
+"ハロー、私の「いつも通り」","Hello Watashi no ""Itsumo Doori"""
 霧・霧・奇・譚,Kiri Kiri Ki Tan
 娘・娘・謹・賀,Jou Jou Kin Ga
 ヒーローインザパーク,Hero in the Park
