added latest card

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -37,6 +37,7 @@ Actual Name,Romanized Name
 氷上バンビーナ,Hyoujou Bambina
 マイフェイバリット,My Favorite
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
+よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
 ほわっとスマイル,Howatto Smile
 柔らかな微笑み,Yawarakana Hohoemi
 淡雪の戯れ,Awayuki no Tawamure
@@ -49,6 +50,7 @@ Actual Name,Romanized Name
 お試し／みつゴコロ,Otameshi Mitsugokoro
 霧・音・燦・燦,Kiri Ne San San
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
+新装備・バブルバスター！,Shinshoubi Bubble Buster!
 ちょこ色×きらきらロマン,Chocoiro Kirakira Romance
 ラムネ色の覚悟,Ramuneiro no Kakugo
 とびっきりジンジャー,Tobikkiri Ginger
@@ -69,6 +71,8 @@ Actual Name,Romanized Name
 やけん、なんの話～！？,"Yaken, Nanno Hanashi~!?"
 カラフルポップMIX,Colorful Pop MIX
 雲間のモーメント,Kumoma no Moment
+マジカル＊スカイレース,Magical Skyrace
+咲耶と摩美々のぶらり旅,"Sakuya to Mamimi no Buraritabi"
 輪になって,Wa ni Natte
 メロウビート・スローダウン,Mellowbeat Slowdown
 綿毛ノ想,Watage no Sou
