--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -70,6 +70,7 @@ Actual Name,Romanized Name
 友達という灯り,Tomodachi to iu Akari
 やけん、なんの話～！？,"Yaken, Nanno Hanashi~!?"
 カラフルポップMIX,Colorful Pop MIX
+アーリー・ナチュラリィ,"Early Naturally"
 雲間のモーメント,Kumoma no Moment
 マジカル＊スカイレース,Magical Skyrace
 咲耶と摩美々のぶらり旅,"Sakuya to Mamimi no Buraritabi"
@@ -81,6 +82,7 @@ Actual Name,Romanized Name
 迷走チョコロード,Meisou Chocoroad
 意地っ張りサンセット,Ijippari Sunset
 ３名様極楽旅行記,Sanmeisama Gokuraku Ryokouki
+百色ふぉとぐらふ,Hyakuiro Photograph
 虹待ちレインドロップ,Nijimachi Raindrop
 紅いろは、白,"Beni Iroha, Shiro"
 秘密のがんばり,Himitsu no Ganbari
@@ -92,6 +94,7 @@ Actual Name,Romanized Name
 はじまりのエピローグ,Hajimari no Epilogue
 冬街イルミネート,Fuyumachi Illuminate
 みんなと結んだもの,Minna to Musundamono
+スタァライトショウタイム,"Starlight Showtime"
 キャプテン★パンプキン,Captain Pumpkin
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
