--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -35,10 +35,12 @@ Actual Name,Romanized Name
 秘密のだらだらタイム,Himitsu no Daradara Time
 シンメトリー・プールサイド,Symmetry Poolside
 氷上バンビーナ,Hyoujou Bambina
+お日様染めのマリーナ,Onichisama Some no Marina
 マイフェイバリット,My Favorite
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
 ほわっとスマイル,Howatto Smile
+ハ♡トフェルトゥギフト,Heartfelt Gift
 柔らかな微笑み,Yawarakana Hohoemi
 淡雪の戯れ,Awayuki no Tawamure
 金色の元気いっぱいガール,Kin'iro no Genki Ippai Girl
@@ -117,6 +119,7 @@ Actual Name,Romanized Name
 #ナッツ・チョコジェリー,#Nuts Choco Jelly
 幸せのりんご飴,Shiawase no Ringo Ame
 まだ……寝ないから……,Mada... Nenai kara....
+お菓子なティータイム,Okashina Teatime
 彩りファッションドール,Irodori Fashion Doll
 身支度はお任せ☆,Mijitaku wa Omakase
 かしまし、みっつの願いごと,"Kashimashi, Mittsu no Negaigoto"
