--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -35,7 +35,7 @@ Actual Name,Romanized Name
 秘密のだらだらタイム,Himitsu no Daradara Time
 シンメトリー・プールサイド,Symmetry Poolside
 氷上バンビーナ,Hyoujou Bambina
-お日様染めのマリーナ,Onichisama Some no Marina
+お日様染めのマリーナ,Ohisama Some no Marina
 マイフェイバリット,My Favorite
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
