--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -70,6 +70,7 @@ Actual Name,Romanized Name
 魔法の階段を上って……,Mahou no Kaidan wo Nobotte
 友情の花吹雪,Yuujou no Hanafubuki
 友達という灯り,Tomodachi to iu Akari
+アイムカミングスーン,"I'm Coming Soon"
 やけん、なんの話～！？,"Yaken, Nanno Hanashi~!?"
 カラフルポップMIX,Colorful Pop MIX
 アーリー・ナチュラリィ,"Early Naturally"
@@ -96,6 +97,7 @@ Actual Name,Romanized Name
 はじまりのエピローグ,Hajimari no Epilogue
 冬街イルミネート,Fuyumachi Illuminate
 みんなと結んだもの,Minna to Musundamono
+風野署長の一日勤務回想録,Kazano Shochou no Ichinichi Kinmu Kaisouroku
 スタァライトショウタイム,"Starlight Showtime"
 キャプテン★パンプキン,Captain Pumpkin
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
