--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -91,6 +91,7 @@ Actual Name,Romanized Name
 秘密のがんばり,Himitsu no Ganbari
 光の想い出,Hikari no Omoida
 アイ・セーブ・ユー,I Save You
+ブルーミングハート,Blooming Heart
 トリプルイルミネーション,Triple Illumination
 お揃いスナップ,Osoroi Snap
 スプラッシュビート,Splash Beat
