--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -54,7 +54,7 @@ Actual Name,Romanized Name
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
 新装備・バブルバスター！,Shinshoubi Bubble Buster!
 ちょこ色×きらきらロマン,Chocoiro Kirakira Romance
-あそ→と♡ちよこれいと,Asoto Chiyocolate
+あそ→と♡ちよこれいと,Assort Chiyocolate
 ラムネ色の覚悟,Ramuneiro no Kakugo
 とびっきりジンジャー,Tobikkiri Ginger
 杜野凛世の印象派,Morino Rinze no Inshousha
