--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -59,6 +59,7 @@ Actual Name,Romanized Name
 とびっきりジンジャー,Tobikkiri Ginger
 杜野凛世の印象派,Morino Rinze no Inshousha
 アルティメットマーメイド,Ultimate Mermaid
+メイドインナツハ,Made In Natsuha
 スタンバイオッケー,Standby OK
 ゆらゆらアクアリウム,Yurayura Aquarium
 事務所。静寂。大輪の華,"Jimusho. Shijima. Dairin no Hana"
@@ -118,6 +119,7 @@ Actual Name,Romanized Name
 桜餅マスター……？,Sakuramochi Master...?
 未知なるFROZEN,Michinaru FROZEN
 ふれんど日和,Furendo Biyori
+凛世夕町物語,Rinze Yuumachi Monogatari
 熱血指導！,Nekketsu Shidou!
 遊びも本気で,Asobi mo Honki de
 #ナッツ・チョコジェリー,#Nuts Choco Jelly
