[ADD] new gacha cards

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -18,6 +18,7 @@ Actual Name,Romanized Name
 雨色、上機嫌,"Amairo, Joukigen"
 包・帯・組・曲,Hou Tai Kumi Kyoku
 伝・伝・心・音,Den Den Shin On
+白・白・白・祈,Shiro Shiro Shiro Inori
 マメ丸と一緒！,Mamemaru to Issho!
 デコって！ハッピークッキー,Dekotte! Happy Cookie
 純真チョコレート,Junshin Chocolate
@@ -107,6 +108,7 @@ Actual Name,Romanized Name
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
 ゴシックデコレーション,Gothic Decoration
 闇鍋上等,Yaminabe Joutou
+夜夜中ワンダーラスト,Yoruyonaka Wanderlust
 指先の煌めき,Yubisaki no Kirameki
 街角フラワーガーデン,Machikado Flower Garden
 等身大のレイニーデイ,Toushindai no Rainy Day
