--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -59,12 +59,14 @@ Actual Name,Romanized Name
 ラムネ色の覚悟,Ramuneiro no Kakugo
 とびっきりジンジャー,Tobikkiri Ginger
 杜野凛世の印象派,Morino Rinze no Inshousha
+凛世花伝,Rinze Kaden
 アルティメットマーメイド,Ultimate Mermaid
 メイドインナツハ,Made In Natsuha
 スタンバイオッケー,Standby OK
 ゆらゆらアクアリウム,Yurayura Aquarium
 事務所。静寂。大輪の華,"Jimusho. Shijima. Dairin no Hana"
 マイ・ピュア・ロマンス,My Pure Romance
+シークレット・ヒロイン,Secret Heroine
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
 天然色ピクニック,Ten'nenshoku Picnic
@@ -128,6 +130,7 @@ Actual Name,Romanized Name
 幸せのりんご飴,Shiawase no Ringo Ame
 まだ……寝ないから……,Mada... Nenai kara....
 お菓子なティータイム,Okashina Teatime
+楽園に背く,Gakuen ni Somuku
 彩りファッションドール,Irodori Fashion Doll
 身支度はお任せ☆,Mijitaku wa Omakase
 かしまし、みっつの願いごと,"Kashimashi, Mittsu no Negaigoto"
