--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -16,6 +16,7 @@ Actual Name,Romanized Name
 ふれあい、おもいあい,"Fureai, Omoiai"
 カラフルメタモルフォーゼ,Colorful Metamorph
 雨色、上機嫌,"Amairo, Joukigen"
+お願い、ただの少女がいい,"Onegai, Tada no Shoujo ga Ii"
 包・帯・組・曲,Hou Tai Kumi Kyoku
 伝・伝・心・音,Den Den Shin On
 白・白・白・祈,Shiro Shiro Shiro Inori
