--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -45,6 +45,7 @@ Actual Name,Romanized Name
 ハ♡トフェルトゥギフト,Heartfelt Gift
 柔らかな微笑み,Yawarakana Hohoemi
 淡雪の戯れ,Awayuki no Tawamure
+伸ばす手に乗せるのは,Nobasute ni Noseruno wa
 金色の元気いっぱいガール,Kin'iro no Genki Ippai Girl
 夏に恋するピチカート！,Natsu ni Koisuru Pizzikato!
 ばりうまかブルース,Bariumaka Blues
@@ -78,6 +79,7 @@ Actual Name,Romanized Name
 友達という灯り,Tomodachi to iu Akari
 アイムカミングスーン,"I'm Coming Soon"
 やけん、なんの話～！？,"Yaken, Nanno Hanashi~!?"
+と～りゃんせ！,Tooryanse!
 カラフルポップMIX,Colorful Pop MIX
 アーリー・ナチュラリィ,"Early Naturally"
 雲間のモーメント,Kumoma no Moment
@@ -103,6 +105,7 @@ Actual Name,Romanized Name
 スプラッシュビート,Splash Beat
 はじまりのエピローグ,Hajimari no Epilogue
 冬街イルミネート,Fuyumachi Illuminate
+駅線上の日常,Ekisenjou no Nichijou
 みんなと結んだもの,Minna to Musundamono
 風野署長の一日勤務回想録,Kazano Shochou no Ichinichi Kinmu Kaisouroku
 スタァライトショウタイム,"Starlight Showtime"
