--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -90,6 +90,7 @@ Actual Name,Romanized Name
 綿毛ノ想,Watage no Sou
 娘・娘・金・魚,Jou Jou Kin Gyo
 放課後スノーガールズ！,Houkago Snow Girls!
+無敵の証！五紋章！,Muteki no Akashi! Gomonshou!
 迷走チョコロード,Meisou Chocoroad
 意地っ張りサンセット,Ijippari Sunset
 ３名様極楽旅行記,Sanmeisama Gokuraku Ryokouki
@@ -140,3 +141,4 @@ Actual Name,Romanized Name
 かしまし、みっつの願いごと,"Kashimashi, Mittsu no Negaigoto"
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
+トキ・メキ・タコさん,Tokimeki Taco-san
