--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -51,6 +51,7 @@ Actual Name,Romanized Name
 ばりうまかブルース,Bariumaka Blues
 月の浜辺で待っとって,Tsuki no Hamabe de Mattotte
 トリッキーナイト,Tricky Night
+摩的・アンチテーゼ,Mateki Antithesis
 紺碧のボーダーライン,Konpeki no Borderline
 お試し／みつゴコロ,Otameshi Mitsugokoro
 霧・音・燦・燦,Kiri Ne San San
@@ -132,6 +133,7 @@ Actual Name,Romanized Name
 熱血指導！,Nekketsu Shidou!
 遊びも本気で,Asobi mo Honki de
 #ナッツ・チョコジェリー,#Nuts Choco Jelly
+月刊CLIMAX,GEKKAN CLIMAX
 幸せのりんご飴,Shiawase no Ringo Ame
 まだ……寝ないから……,Mada... Nenai kara....
 お菓子なティータイム,Okashina Teatime
