--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -7,6 +7,7 @@ Actual Name,Romanized Name
 マフラー直して、心は解けて,"Muffler Naoshite, Kokoro wa Tokete"
 キネマ・リリックで夢見て,Cinema Lyric de Yumemite
 小さな夜のトロイメライ,Chiisana Yoru no Träumerei
+チエルアルコは流星の,Chieralco wa Ryuusei no
 ばってん長崎恋岬,Batten Nagasaki Koimisaki
 ビ～♡バップ海岸,Bebop Kaigan
 裏腹あまのじゃく,Urahara Amanojaku
@@ -55,6 +56,7 @@ Actual Name,Romanized Name
 紺碧のボーダーライン,Konpeki no Borderline
 お試し／みつゴコロ,Otameshi Mitsugokoro
 霧・音・燦・燦,Kiri Ne San San
+夕・音・鳴・鳴,Yuu Ne Mei Mei
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
 新装備・バブルバスター！,Shinshoubi Bubble Buster!
 ちょこ色×きらきらロマン,Chocoiro Kirakira Romance
