--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -10,6 +10,7 @@ Actual Name,Romanized Name
 チエルアルコは流星の,Chieralco wa Ryuusei no
 ばってん長崎恋岬,Batten Nagasaki Koimisaki
 ビ～♡バップ海岸,Bebop Kaigan
+は～と♡に火をつけて,Heart ni Hi wo tsukete
 裏腹あまのじゃく,Urahara Amanojaku
 夕つ方まみみチック,Yuutsugata Mamimi Tick
 そのまみみ無気力につき,"Sono Mamimi Mukiryoku Nitsuki"
