asdf event card so lazy

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -43,6 +43,7 @@ Actual Name,Romanized Name
 マイフェイバリット,My Favorite
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
+ザ・冬優子イズム,"The Fuyukoism"
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
 柔らかな微笑み,Yawarakana Hohoemi
@@ -71,6 +72,7 @@ Actual Name,Romanized Name
 スタンバイオッケー,Standby OK
 ゆらゆらアクアリウム,Yurayura Aquarium
 事務所。静寂。大輪の華,"Jimusho. Shijima. Dairin no Hana"
+好きなものはなんですか？,"Sukinamono wa Nandesuka?"
 マイ・ピュア・ロマンス,My Pure Romance
 シークレット・ヒロイン,Secret Heroine
 アイドルのたまご,Idol no Tamago
@@ -115,6 +117,7 @@ Actual Name,Romanized Name
 風野署長の一日勤務回想録,Kazano Shochou no Ichinichi Kinmu Kaisouroku
 スタァライトショウタイム,"Starlight Showtime"
 キャプテン★パンプキン,Captain Pumpkin
+花笑み咲匂う,"Hanaemi Sakiniou"
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
 ゴシックデコレーション,Gothic Decoration
