--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -143,6 +143,7 @@ Actual Name,Romanized Name
 幸せのりんご飴,Shiawase no Ringo Ame
 まだ……寝ないから……,Mada... Nenai kara....
 お菓子なティータイム,Okashina Teatime
+ハッピーの答えはどこに？,"Happy no Kotae wa Doko ni?"
 楽園に背く,Gakuen ni Somuku
 彩りファッションドール,Irodori Fashion Doll
 身支度はお任せ☆,Mijitaku wa Omakase
