--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -57,6 +57,7 @@ Actual Name,Romanized Name
 摩的・アンチテーゼ,Mateki Antithesis
 紺碧のボーダーライン,Konpeki no Borderline
 お試し／みつゴコロ,Otameshi Mitsugokoro
+それなら目をつぶりましょう,Sorenara Me wo Tsuburimashou
 霧・音・燦・燦,Kiri Ne San San
 夕・音・鳴・鳴,Yuu Ne Mei Mei
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
@@ -100,6 +101,7 @@ Actual Name,Romanized Name
 迷走チョコロード,Meisou Chocoroad
 意地っ張りサンセット,Ijippari Sunset
 ３名様極楽旅行記,Sanmeisama Gokuraku Ryokouki
+グッド・ラック・ボール,Good Luck Ball
 百色ふぉとぐらふ,Hyakuiro Photograph
 虹待ちレインドロップ,Nijimachi Raindrop
 紅いろは、白,"Beni Iroha, Shiro"
