new cards are fast now

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -22,6 +22,7 @@ Actual Name,Romanized Name
 包・帯・組・曲,Hou Tai Kumi Kyoku
 伝・伝・心・音,Den Den Shin On
 白・白・白・祈,Shiro Shiro Shiro Inori
+天・天・白・布,Ama Ama Hakufu
 マメ丸と一緒！,Mamemaru to Issho!
 デコって！ハッピークッキー,Dekotte! Happy Cookie
 純真チョコレート,Junshin Chocolate
@@ -43,6 +44,7 @@ Actual Name,Romanized Name
 マイフェイバリット,My Favorite
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
+さかさま世界,"Sakasama Sekai"
 ザ・冬優子イズム,"The Fuyukoism"
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
@@ -53,6 +55,7 @@ Actual Name,Romanized Name
 夏に恋するピチカート！,Natsu ni Koisuru Pizzikato!
 ばりうまかブルース,Bariumaka Blues
 月の浜辺で待っとって,Tsuki no Hamabe de Mattotte
+風吹く丘にはよ来んね,Kaze Fukuoka ni Hayo Kunne
 トリッキーナイト,Tricky Night
 摩的・アンチテーゼ,Mateki Antithesis
 紺碧のボーダーライン,Konpeki no Borderline
@@ -103,6 +106,7 @@ Actual Name,Romanized Name
 ３名様極楽旅行記,Sanmeisama Gokuraku Ryokouki
 グッド・ラック・ボール,Good Luck Ball
 百色ふぉとぐらふ,Hyakuiro Photograph
+をとめ大学,"Otome Daigaku"
 虹待ちレインドロップ,Nijimachi Raindrop
 紅いろは、白,"Beni Iroha, Shiro"
 秘密のがんばり,Himitsu no Ganbari
