event card later

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -137,6 +137,7 @@ Actual Name,Romanized Name
 娘・娘・謹・賀,Jou Jou Kin Ga
 ヒーローインザパーク,Hero in the Park
 鉄板★絶品★海の家,Teppan Zeppin Umi no Ie
+雨のち、マイヒーロー,"Ame no chi, My Hero"
 放課後★肝試しパニック,Houkago Kimodameshi Panic
 桜餅マスター……？,Sakuramochi Master...?
 未知なるFROZEN,Michinaru FROZEN
