--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -140,6 +140,7 @@ Actual Name,Romanized Name
 雨のち、マイヒーロー,"Ame no chi, My Hero"
 放課後★肝試しパニック,Houkago Kimodameshi Panic
 桜餅マスター……？,Sakuramochi Master...?
+紅蘭偉魔空珠に挑め！,CLIMAX ni Idome!
 未知なるFROZEN,Michinaru FROZEN
 ふれんど日和,Furendo Biyori
 凛世夕町物語,Rinze Yuumachi Monogatari
