DDR stands for dance dance reivolution

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -46,6 +46,7 @@ Actual Name,Romanized Name
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
 さかさま世界,"Sakasama Sekai"
 ザ・冬優子イズム,"The Fuyukoism"
+気になる！？染めちゃう！？,"Kininaru!? Somechau!?"
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
 柔らかな微笑み,Yawarakana Hohoemi
@@ -59,6 +60,7 @@ Actual Name,Romanized Name
 トリッキーナイト,Tricky Night
 摩的・アンチテーゼ,Mateki Antithesis
 紺碧のボーダーライン,Konpeki no Borderline
+幸福のリズム,Koufuku no Rhythm
 お試し／みつゴコロ,Otameshi Mitsugokoro
 それなら目をつぶりましょう,Sorenara Me wo Tsuburimashou
 霧・音・燦・燦,Kiri Ne San San
@@ -82,6 +84,7 @@ Actual Name,Romanized Name
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
 天然色ピクニック,Ten'nenshoku Picnic
+音、雨、パシャ、リ,"Oto, Ame, Pasha, RI"
 克服の特訓,Kokufuku no Tokkun
 遊び疲れて……,Asobi Tsukarete...
 魔法の階段を上って……,Mahou no Kaidan wo Nobotte
