--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -37,6 +37,7 @@ Actual Name,Romanized Name
 カトレアの花言葉,Cattlea no Hanakotoba
 似合うかな？,Niaukana?
 甜花ちゃんといっしょ☆,Tenka-chan to Issho
+ふたつの雨,Futatsu no Ame
 秘密のだらだらタイム,Himitsu no Daradara Time
 シンメトリー・プールサイド,Symmetry Poolside
 氷上バンビーナ,Hyoujou Bambina
@@ -54,6 +55,7 @@ Actual Name,Romanized Name
 伸ばす手に乗せるのは,Nobasute ni Noseruno wa
 金色の元気いっぱいガール,Kin'iro no Genki Ippai Girl
 夏に恋するピチカート！,Natsu ni Koisuru Pizzikato!
+シュカのまにまに,Ska no Manimani
 ばりうまかブルース,Bariumaka Blues
 月の浜辺で待っとって,Tsuki no Hamabe de Mattotte
 風吹く丘にはよ来んね,Kaze Fukuoka ni Hayo Kunne
@@ -124,6 +126,7 @@ Actual Name,Romanized Name
 駅線上の日常,Ekisenjou no Nichijou
 みんなと結んだもの,Minna to Musundamono
 風野署長の一日勤務回想録,Kazano Shochou no Ichinichi Kinmu Kaisouroku
+星合アステリズム,"Hoshiai Asterism"
 スタァライトショウタイム,"Starlight Showtime"
 キャプテン★パンプキン,Captain Pumpkin
 花笑み咲匂う,"Hanaemi Sakiniou"
