--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -83,6 +83,7 @@ Actual Name,Romanized Name
 好きなものはなんですか？,"Sukinamono wa Nandesuka?"
 マイ・ピュア・ロマンス,My Pure Romance
 シークレット・ヒロイン,Secret Heroine
+ジャンプ！スタッグ！！！,"Jump! Stag!!!"
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
 天然色ピクニック,Ten'nenshoku Picnic
@@ -118,6 +119,7 @@ Actual Name,Romanized Name
 光の想い出,Hikari no Omoida
 アイ・セーブ・ユー,I Save You
 ブルーミングハート,Blooming Heart
+こころに恋,Kokoro ni Koi
 トリプルイルミネーション,Triple Illumination
 お揃いスナップ,Osoroi Snap
 スプラッシュビート,Splash Beat
@@ -165,3 +167,4 @@ Actual Name,Romanized Name
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
+なるんじゃん？,Narunjyan?
