fast update for now!

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -73,6 +73,7 @@ Actual Name,Romanized Name
 あそ→と♡ちよこれいと,Assort Chiyocolate
 ラムネ色の覚悟,Ramuneiro no Kakugo
 とびっきりジンジャー,Tobikkiri Ginger
+曲がり角のランウェイ,Magarikado no Runway
 杜野凛世の印象派,Morino Rinze no Inshousha
 凛世花伝,Rinze Kaden
 アルティメットマーメイド,Ultimate Mermaid
@@ -134,6 +135,7 @@ Actual Name,Romanized Name
 花笑み咲匂う,"Hanaemi Sakiniou"
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
+夏、どがんね～？,"Natsu, Doganne~?"
 ゴシックデコレーション,Gothic Decoration
 闇鍋上等,Yaminabe Joutou
 夜夜中ワンダーラスト,Yoruyonaka Wanderlust
@@ -143,6 +145,7 @@ Actual Name,Romanized Name
 "ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
 霧・霧・奇・譚,Kiri Kiri Ki Tan
 娘・娘・謹・賀,Jou Jou Kin Ga
+我・思・君・思,"Gashi Kunshi"
 ヒーローインザパーク,Hero in the Park
 鉄板★絶品★海の家,Teppan Zeppin Umi no Ie
 雨のち、マイヒーロー,"Ame no chi, My Hero"
