--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -47,6 +47,7 @@ Actual Name,Romanized Name
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
 さかさま世界,"Sakasama Sekai"
 ザ・冬優子イズム,"The Fuyukoism"
+水×天カイヤナイト,"Suiten Kyanite"
 気になる！？染めちゃう！？,"Kininaru!? Somechau!?"
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
@@ -61,6 +62,7 @@ Actual Name,Romanized Name
 風吹く丘にはよ来んね,Kaze Fukuoka ni Hayo Kunne
 トリッキーナイト,Tricky Night
 摩的・アンチテーゼ,Mateki Antithesis
+パープル・ミラージュ,Bubble Mirage
 紺碧のボーダーライン,Konpeki no Borderline
 幸福のリズム,Koufuku no Rhythm
 お試し／みつゴコロ,Otameshi Mitsugokoro
@@ -95,6 +97,7 @@ Actual Name,Romanized Name
 友情の花吹雪,Yuujou no Hanafubuki
 友達という灯り,Tomodachi to iu Akari
 アイムカミングスーン,"I'm Coming Soon"
+サンシャインシエスタ！,"Sunshine Siesta!"
 やけん、なんの話～！？,"Yaken, Nanno Hanashi~!?"
 と～りゃんせ！,Tooryanse!
 カラフルポップMIX,Colorful Pop MIX
