--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -62,7 +62,7 @@ Actual Name,Romanized Name
 風吹く丘にはよ来んね,Kaze Fukuoka ni Hayo Kunne
 トリッキーナイト,Tricky Night
 摩的・アンチテーゼ,Mateki Antithesis
-パープル・ミラージュ,Bubble Mirage
+パープル・ミラージュ,Purple Mirage
 紺碧のボーダーライン,Konpeki no Borderline
 幸福のリズム,Koufuku no Rhythm
 お試し／みつゴコロ,Otameshi Mitsugokoro
