thanks for hte patience

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -86,6 +86,7 @@ Actual Name,Romanized Name
 好きなものはなんですか？,"Sukinamono wa Nandesuka?"
 マイ・ピュア・ロマンス,My Pure Romance
 シークレット・ヒロイン,Secret Heroine
+サマーハニー・シーズン,"Summer Honey Season"
 ジャンプ！スタッグ！！！,"Jump! Stag!!!"
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
@@ -149,6 +150,7 @@ Actual Name,Romanized Name
 霧・霧・奇・譚,Kiri Kiri Ki Tan
 娘・娘・謹・賀,Jou Jou Kin Ga
 我・思・君・思,"Gashi Kunshi"
+潜・潜・夏・娘,"Senzen Kajou"
 ヒーローインザパーク,Hero in the Park
 鉄板★絶品★海の家,Teppan Zeppin Umi no Ie
 雨のち、マイヒーロー,"Ame no chi, My Hero"
@@ -158,6 +160,7 @@ Actual Name,Romanized Name
 未知なるFROZEN,Michinaru FROZEN
 ふれんど日和,Furendo Biyori
 凛世夕町物語,Rinze Yuumachi Monogatari
+常夏CLIMAX,"Tokonatsu CLIMAX"
 熱血指導！,Nekketsu Shidou!
 遊びも本気で,Asobi mo Honki de
 #ナッツ・チョコジェリー,#Nuts Choco Jelly
