--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -5,6 +5,7 @@ Actual Name,Romanized Name
 ぐうぜんBOOKS,Guuzen BOOKS
 手作りの心遣い,Tedzukuri no Kokorodzukai
 マフラー直して、心は解けて,"Muffler Naoshite, Kokoro wa Tokete"
+落下予測地点,"Rakka Yosoku Chiten"
 キネマ・リリックで夢見て,Cinema Lyric de Yumemite
 小さな夜のトロイメライ,Chiisana Yoru no Träumerei
 チエルアルコは流星の,Chieralco wa Ryuusei no
@@ -49,8 +50,10 @@ Actual Name,Romanized Name
 ザ・冬優子イズム,"The Fuyukoism"
 水×天カイヤナイト,"Suiten Kyanite"
 気になる！？染めちゃう！？,"Kininaru!? Somechau!?"
+てへっ♪,"Tehe"
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
+はじけてスマイル,Hajikete Smile
 柔らかな微笑み,Yawarakana Hohoemi
 淡雪の戯れ,Awayuki no Tawamure
 伸ばす手に乗せるのは,Nobasute ni Noseruno wa
