--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -74,6 +74,7 @@ Actual Name,Romanized Name
 夕・音・鳴・鳴,Yuu Ne Mei Mei
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
 新装備・バブルバスター！,Shinshoubi Bubble Buster!
+潮騒のシーショア,Shiosai no Seashore
 ちょこ色×きらきらロマン,Chocoiro Kirakira Romance
 あそ→と♡ちよこれいと,Assort Chiyocolate
 ラムネ色の覚悟,Ramuneiro no Kakugo
@@ -128,6 +129,7 @@ Actual Name,Romanized Name
 アイ・セーブ・ユー,I Save You
 ブルーミングハート,Blooming Heart
 こころに恋,Kokoro ni Koi
+腹が減っては遊びはできぬ,Hara ga Hette wa Asobi wa Dekinu
 トリプルイルミネーション,Triple Illumination
 お揃いスナップ,Osoroi Snap
 スプラッシュビート,Splash Beat
