--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -117,6 +117,7 @@ Actual Name,Romanized Name
 放課後スノーガールズ！,Houkago Snow Girls!
 無敵の証！五紋章！,Muteki no Akashi! Gomonshou!
 迷走チョコロード,Meisou Chocoroad
+Best☆Great☆サマー！,"Best Great Summer!"
 意地っ張りサンセット,Ijippari Sunset
 ３名様極楽旅行記,Sanmeisama Gokuraku Ryokouki
 グッド・ラック・ボール,Good Luck Ball
