--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -164,6 +164,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 桜餅マスター……？,Sakuramochi Master...?
 紅蘭偉魔空珠に挑め！,CLIMAX ni Idome!
 未知なるFROZEN,Michinaru FROZEN
+スリープオーバーベイビー,"Sleepover Baby"
 ふれんど日和,Furendo Biyori
 凛世夕町物語,Rinze Yuumachi Monogatari
 常夏CLIMAX,"Tokonatsu CLIMAX"
