--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -151,6 +151,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 夜夜中ワンダーラスト,Yoruyonaka Wanderlust
 指先の煌めき,Yubisaki no Kirameki
 街角フラワーガーデン,Machikado Flower Garden
+月映えのソワレ,Tsukibae no Soiree
 等身大のレイニーデイ,Toushindai no Rainy Day
 "ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
 霧・霧・奇・譚,Kiri Kiri Ki Tan
