--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -72,6 +72,7 @@ Actual Name,Romanized Name
 それなら目をつぶりましょう,Sorenara Me wo Tsuburimashou
 霧・音・燦・燦,Kiri Ne San San
 夕・音・鳴・鳴,Yuu Ne Mei Mei
+菜・菜・輪・舞,Nana Rinbu
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
 新装備・バブルバスター！,Shinshoubi Bubble Buster!
 潮騒のシーショア,Shiosai no Seashore
@@ -184,4 +185,5 @@ Best☆Great☆サマー！,"Best Great Summer!"
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
+スパイシーベリィデコレイト,Spicy Berry Decorate
 なるんじゃん？,Narunjyan?
