--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -100,6 +100,7 @@ Actual Name,Romanized Name
 克服の特訓,Kokufuku no Tokkun
 遊び疲れて……,Asobi Tsukarete...
 魔法の階段を上って……,Mahou no Kaidan wo Nobotte
+RPGのススメ,RPG no Susume
 友情の花吹雪,Yuujou no Hanafubuki
 友達という灯り,Tomodachi to iu Akari
 アイムカミングスーン,"I'm Coming Soon"
