--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -83,6 +83,7 @@ Actual Name,Romanized Name
 曲がり角のランウェイ,Magarikado no Runway
 杜野凛世の印象派,Morino Rinze no Inshousha
 凛世花伝,Rinze Kaden
+水色感情,Mizuiro Kanjou
 アルティメットマーメイド,Ultimate Mermaid
 メイドインナツハ,Made In Natsuha
 スタンバイオッケー,Standby OK
@@ -127,6 +128,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 をとめ大学,"Otome Daigaku"
 虹待ちレインドロップ,Nijimachi Raindrop
 紅いろは、白,"Beni Iroha, Shiro"
+スタンド・バイ,"Stand by"
 秘密のがんばり,Himitsu no Ganbari
 光の想い出,Hikari no Omoida
 アイ・セーブ・ユー,I Save You
