--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -47,6 +47,7 @@ Actual Name,Romanized Name
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
 さかさま世界,"Sakasama Sekai"
+かしゃーんとがらがら,"Kashaan to Garagara"
 ザ・冬優子イズム,"The Fuyukoism"
 水×天カイヤナイト,"Suiten Kyanite"
 気になる！？染めちゃう！？,"Kininaru!? Somechau!?"
