--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -79,6 +79,7 @@ Actual Name,Romanized Name
 潮騒のシーショア,Shiosai no Seashore
 ちょこ色×きらきらロマン,Chocoiro Kirakira Romance
 あそ→と♡ちよこれいと,Assort Chiyocolate
+かきまぜたら＊ミルク,Kakimazetara Milk
 ラムネ色の覚悟,Ramuneiro no Kakugo
 とびっきりジンジャー,Tobikkiri Ginger
 曲がり角のランウェイ,Magarikado no Runway
@@ -154,6 +155,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 ゴシックデコレーション,Gothic Decoration
 闇鍋上等,Yaminabe Joutou
 夜夜中ワンダーラスト,Yoruyonaka Wanderlust
+きまぐれのめぐみ,Kimagure no Megumi
 指先の煌めき,Yubisaki no Kirameki
 街角フラワーガーデン,Machikado Flower Garden
 月映えのソワレ,Tsukibae no Soiree
