--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -188,6 +188,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 彩りファッションドール,Irodori Fashion Doll
 身支度はお任せ☆,Mijitaku wa Omakase
 かしまし、みっつの願いごと,"Kashimashi, Mittsu no Negaigoto"
+トゥインクル・トゥインクル,"Twinkle Twinkle"
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
