--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -26,6 +26,7 @@ Actual Name,Romanized Name
 天・天・白・布,Ama Ama Hakufu
 マメ丸と一緒！,Mamemaru to Issho!
 デコって！ハッピークッキー,Dekotte! Happy Cookie
+キャッチ・ザ・フォール！,"Catch the Fowl!"
 純真チョコレート,Junshin Chocolate
 よろしく♡めしませっ,Yoroshiku Meshimase
 バッドガールの羽ばたき,Bad Girl no Habataki
@@ -96,6 +97,7 @@ Actual Name,Romanized Name
 シークレット・ヒロイン,Secret Heroine
 サマーハニー・シーズン,"Summer Honey Season"
 ジャンプ！スタッグ！！！,"Jump! Stag!!!"
+ちょっとあげる～,"Chotto Ageru~"
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
 天然色ピクニック,Ten'nenshoku Picnic
