--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -112,6 +112,7 @@ RPGのススメ,RPG no Susume
 サンシャインシエスタ！,"Sunshine Siesta!"
 やけん、なんの話～！？,"Yaken, Nanno Hanashi~!?"
 と～りゃんせ！,Tooryanse!
+秋、どがんね～？,"Aki, Doganne~?"
 カラフルポップMIX,Colorful Pop MIX
 アーリー・ナチュラリィ,"Early Naturally"
 雲間のモーメント,Kumoma no Moment
