--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -47,6 +47,7 @@ Actual Name,Romanized Name
 マイフェイバリット,My Favorite
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
+ワン・モア・フラワリング,"One More Flowering"
 さかさま世界,"Sakasama Sekai"
 かしゃーんとがらがら,"Kashaan to Garagara"
 ザ・冬優子イズム,"The Fuyukoism"
@@ -91,6 +92,7 @@ Actual Name,Romanized Name
 メイドインナツハ,Made In Natsuha
 スタンバイオッケー,Standby OK
 ゆらゆらアクアリウム,Yurayura Aquarium
+ないしょのスイーツ,"Naisho no Sweets"
 事務所。静寂。大輪の華,"Jimusho. Shijima. Dairin no Hana"
 好きなものはなんですか？,"Sukinamono wa Nandesuka?"
 マイ・ピュア・ロマンス,My Pure Romance
@@ -164,6 +166,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 月映えのソワレ,Tsukibae no Soiree
 等身大のレイニーデイ,Toushindai no Rainy Day
 "ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
+賑やか四畳半,"Nigiyaka Yojouhan"
 霧・霧・奇・譚,Kiri Kiri Ki Tan
 娘・娘・謹・賀,Jou Jou Kin Ga
 我・思・君・思,"Gashi Kunshi"
