--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -57,6 +57,7 @@ Actual Name,Romanized Name
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
 はじけてスマイル,Hajikete Smile
+深染め、いろみぐさ,"Fukashime, Iromigusa"
 柔らかな微笑み,Yawarakana Hohoemi
 淡雪の戯れ,Awayuki no Tawamure
 伸ばす手に乗せるのは,Nobasute ni Noseruno wa
@@ -150,9 +151,11 @@ Best☆Great☆サマー！,"Best Great Summer!"
 駅線上の日常,Ekisenjou no Nichijou
 みんなと結んだもの,Minna to Musundamono
 風野署長の一日勤務回想録,Kazano Shochou no Ichinichi Kinmu Kaisouroku
+星掬い藍仰ぐ,"Hoshisukui Ai'aogu"
 星合アステリズム,"Hoshiai Asterism"
 スタァライトショウタイム,"Starlight Showtime"
 キャプテン★パンプキン,Captain Pumpkin
+ああひかりよ,"Ah Hikari yo"
 花笑み咲匂う,"Hanaemi Sakiniou"
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
