COME ON AND SLAM, AND WELCOME TO THE JAM!

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -70,7 +70,9 @@ Actual Name,Romanized Name
 トリッキーナイト,Tricky Night
 摩的・アンチテーゼ,Mateki Antithesis
 パープル・ミラージュ,Purple Mirage
+フィドル・ファドル,Fiddle Faddle
 紺碧のボーダーライン,Konpeki no Borderline
+1/60・NaturalHeart,"1-frame Natural Heart"
 幸福のリズム,Koufuku no Rhythm
 お試し／みつゴコロ,Otameshi Mitsugokoro
 それなら目をつぶりましょう,Sorenara Me wo Tsuburimashou
@@ -100,6 +102,7 @@ Actual Name,Romanized Name
 シークレット・ヒロイン,Secret Heroine
 サマーハニー・シーズン,"Summer Honey Season"
 ジャンプ！スタッグ！！！,"Jump! Stag!!!"
+オ♡フ♡レ♡コ,"Off the Record"
 ちょっとあげる～,"Chotto Ageru~"
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
@@ -123,12 +126,14 @@ RPGのススメ,RPG no Susume
 咲耶と摩美々のぶらり旅,"Sakuya to Mamimi no Buraritabi"
 輪になって,Wa ni Natte
 メロウビート・スローダウン,Mellowbeat Slowdown
+SIDE：Y,"SIDE:Y"
 綿毛ノ想,Watage no Sou
 娘・娘・金・魚,Jou Jou Kin Gyo
 放課後スノーガールズ！,Houkago Snow Girls!
 無敵の証！五紋章！,Muteki no Akashi! Gomonshou!
 迷走チョコロード,Meisou Chocoroad
 Best☆Great☆サマー！,"Best Great Summer!"
+ぐるもこ・まふ×２,"Gurumoko Mafumafu"
 意地っ張りサンセット,Ijippari Sunset
 ３名様極楽旅行記,Sanmeisama Gokuraku Ryokouki
 グッド・ラック・ボール,Good Luck Ball
@@ -137,8 +142,10 @@ Best☆Great☆サマー！,"Best Great Summer!"
 虹待ちレインドロップ,Nijimachi Raindrop
 紅いろは、白,"Beni Iroha, Shiro"
 スタンド・バイ,"Stand by"
+夢追いランナバウト,"Yumeoi Runabout"
 秘密のがんばり,Himitsu no Ganbari
 光の想い出,Hikari no Omoida
+冬の日の『贈り物』,"Fuyu no Hi no ""Okurimono"""
 アイ・セーブ・ユー,I Save You
 ブルーミングハート,Blooming Heart
 こころに恋,Kokoro ni Koi
@@ -159,6 +166,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 花笑み咲匂う,"Hanaemi Sakiniou"
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
+SIDE：K,"SIDE:K"
 夏、どがんね～？,"Natsu, Doganne~?"
 ゴシックデコレーション,Gothic Decoration
 闇鍋上等,Yaminabe Joutou
@@ -168,6 +176,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 街角フラワーガーデン,Machikado Flower Garden
 月映えのソワレ,Tsukibae no Soiree
 等身大のレイニーデイ,Toushindai no Rainy Day
+prince×princess,"prince x princess"
 "ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
 賑やか四畳半,"Nigiyaka Yojouhan"
 霧・霧・奇・譚,Kiri Kiri Ki Tan
@@ -201,5 +210,6 @@ Best☆Great☆サマー！,"Best Great Summer!"
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
+ウォーム・スノウ,"Warm Snow"
 スパイシーベリィデコレイト,Spicy Berry Decorate
 なるんじゃん？,Narunjyan?
