--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -91,6 +91,7 @@ Actual Name,Romanized Name
 杜野凛世の印象派,Morino Rinze no Inshousha
 凛世花伝,Rinze Kaden
 水色感情,Mizuiro Kanjou
+十二月短篇,Juunigatsu Tanpen
 アルティメットマーメイド,Ultimate Mermaid
 メイドインナツハ,Made In Natsuha
 スタンバイオッケー,Standby OK
@@ -179,6 +180,7 @@ SIDE：K,"SIDE:K"
 prince×princess,"prince x princess"
 "ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
 賑やか四畳半,"Nigiyaka Yojouhan"
+プレゼントなら両手いっぱい,Present nara Katate Ippai
 霧・霧・奇・譚,Kiri Kiri Ki Tan
 娘・娘・謹・賀,Jou Jou Kin Ga
 我・思・君・思,"Gashi Kunshi"
@@ -211,5 +213,6 @@ prince×princess,"prince x princess"
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
 ウォーム・スノウ,"Warm Snow"
+プレゼン・バトン！,"Present Baton!"
 スパイシーベリィデコレイト,Spicy Berry Decorate
 なるんじゃん？,Narunjyan?
