--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -27,6 +27,7 @@ Actual Name,Romanized Name
 マメ丸と一緒！,Mamemaru to Issho!
 デコって！ハッピークッキー,Dekotte! Happy Cookie
 キャッチ・ザ・フォール！,"Catch the Fowl!"
+窓辺・サイレントタイム,"Madobe Silent Time"
 純真チョコレート,Junshin Chocolate
 よろしく♡めしませっ,Yoroshiku Meshimase
 バッドガールの羽ばたき,Bad Girl no Habataki
