--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -45,6 +45,7 @@ Actual Name,Romanized Name
 シンメトリー・プールサイド,Symmetry Poolside
 氷上バンビーナ,Hyoujou Bambina
 お日様染めのマリーナ,Ohisama Some no Marina
+ストライク狙って,"Strike Neratte"
 マイフェイバリット,My Favorite
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
 よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
@@ -65,6 +66,7 @@ Actual Name,Romanized Name
 金色の元気いっぱいガール,Kin'iro no Genki Ippai Girl
 夏に恋するピチカート！,Natsu ni Koisuru Pizzikato!
 シュカのまにまに,Ska no Manimani
+日々を紡ぐインヴェルノ,"Hibi wo Tsumugu Inferno"
 ばりうまかブルース,Bariumaka Blues
 月の浜辺で待っとって,Tsuki no Hamabe de Mattotte
 風吹く丘にはよ来んね,Kaze Fukuoka ni Hayo Kunne
@@ -121,6 +123,7 @@ RPGのススメ,RPG no Susume
 やけん、なんの話～！？,"Yaken, Nanno Hanashi~!?"
 と～りゃんせ！,Tooryanse!
 秋、どがんね～？,"Aki, Doganne~?"
+冬、どがんね～？,"Fuyu, Doganne~?"
 カラフルポップMIX,Colorful Pop MIX
 アーリー・ナチュラリィ,"Early Naturally"
 雲間のモーメント,Kumoma no Moment
