--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -82,6 +82,7 @@ Actual Name,Romanized Name
 霧・音・燦・燦,Kiri Ne San San
 夕・音・鳴・鳴,Yuu Ne Mei Mei
 菜・菜・輪・舞,Nana Rinbu
+鱗・鱗・謹・賀,Rinrin Kin'ga
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
 新装備・バブルバスター！,Shinshoubi Bubble Buster!
 潮騒のシーショア,Shiosai no Seashore
@@ -177,6 +178,7 @@ SIDE：K,"SIDE:K"
 闇鍋上等,Yaminabe Joutou
 夜夜中ワンダーラスト,Yoruyonaka Wanderlust
 きまぐれのめぐみ,Kimagure no Megumi
+デタラメハッシュタグ,Detarame Hashtag
 指先の煌めき,Yubisaki no Kirameki
 街角フラワーガーデン,Machikado Flower Garden
 月映えのソワレ,Tsukibae no Soiree
@@ -186,7 +188,7 @@ prince×princess,"prince x princess"
 賑やか四畳半,"Nigiyaka Yojouhan"
 プレゼントなら両手いっぱい,Present nara Katate Ippai
 霧・霧・奇・譚,Kiri Kiri Ki Tan
-娘・娘・謹・賀,Jou Jou Kin Ga
+娘・娘・謹・賀,"Joujou Kinga"
 我・思・君・思,"Gashi Kunshi"
 潜・潜・夏・娘,"Senzen Kajou"
 ヒーローインザパーク,Hero in the Park
@@ -219,4 +221,5 @@ prince×princess,"prince x princess"
 ウォーム・スノウ,"Warm Snow"
 プレゼン・バトン！,"Present Baton!"
 スパイシーベリィデコレイト,Spicy Berry Decorate
+ノー墨・勝者フェイス,No Sumi Shousha Phase
 なるんじゃん？,Narunjyan?
