long time no update

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -17,6 +17,7 @@ Actual Name,Romanized Name
 そのまみみ無気力につき,"Sono Mamimi Mukiryoku Nitsuki"
 秘めやかファンサービス,Himeyaka Fan Service
 ふれあい、おもいあい,"Fureai, Omoiai"
+雪染めロマンティカ,Yukisome Romantica
 カラフルメタモルフォーゼ,Colorful Metamorph
 雨色、上機嫌,"Amairo, Joukigen"
 お願い、ただの少女がいい,"Onegai, Tada no Shoujo ga Ii"
@@ -30,6 +31,7 @@ Actual Name,Romanized Name
 窓辺・サイレントタイム,"Madobe Silent Time"
 純真チョコレート,Junshin Chocolate
 よろしく♡めしませっ,Yoroshiku Meshimase
+錯覚・Darling,"Sakkaku Darling"
 バッドガールの羽ばたき,Bad Girl no Habataki
 オフデーゲーム,Off the Game
 想ひいろは,Souhi Iroha
@@ -63,6 +65,7 @@ Actual Name,Romanized Name
 柔らかな微笑み,Yawarakana Hohoemi
 淡雪の戯れ,Awayuki no Tawamure
 伸ばす手に乗せるのは,Nobasute ni Noseruno wa
+清閑に息をひそめて,Seikan ni Iki wo Hisomete
 金色の元気いっぱいガール,Kin'iro no Genki Ippai Girl
 夏に恋するピチカート！,Natsu ni Koisuru Pizzikato!
 シュカのまにまに,Ska no Manimani
@@ -92,6 +95,7 @@ Actual Name,Romanized Name
 ラムネ色の覚悟,Ramuneiro no Kakugo
 とびっきりジンジャー,Tobikkiri Ginger
 曲がり角のランウェイ,Magarikado no Runway
+誰が為シンパシー,"Dare ga Tame Sympathy"
 杜野凛世の印象派,Morino Rinze no Inshousha
 凛世花伝,Rinze Kaden
 水色感情,Mizuiro Kanjou
@@ -156,6 +160,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 ブルーミングハート,Blooming Heart
 こころに恋,Kokoro ni Koi
 腹が減っては遊びはできぬ,Hara ga Hette wa Asobi wa Dekinu
+和泉流・書道心得,"Izumi-ryuu Shodou Kokoroe"
 トリプルイルミネーション,Triple Illumination
 お揃いスナップ,Osoroi Snap
 スプラッシュビート,Splash Beat
@@ -219,6 +224,7 @@ prince×princess,"prince x princess"
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
 ウォーム・スノウ,"Warm Snow"
+あめ、ゆき、はれ,"Ame, Yuki, Hare"
 プレゼン・バトン！,"Present Baton!"
 スパイシーベリィデコレイト,Spicy Berry Decorate
 ノー墨・勝者フェイス,No Sumi Shousha Phase
