--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -73,6 +73,7 @@ Actual Name,Romanized Name
 ばりうまかブルース,Bariumaka Blues
 月の浜辺で待っとって,Tsuki no Hamabe de Mattotte
 風吹く丘にはよ来んね,Kaze Fukuoka ni Hayo Kunne
+うちのリボンは恋結び,Uchi no Ribbon wa Komusubi
 トリッキーナイト,Tricky Night
 摩的・アンチテーゼ,Mateki Antithesis
 パープル・ミラージュ,Purple Mirage
@@ -89,6 +90,7 @@ Actual Name,Romanized Name
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
 新装備・バブルバスター！,Shinshoubi Bubble Buster!
 潮騒のシーショア,Shiosai no Seashore
+エクストリーム・ブレイク！,Extreme Break!
 ちょこ色×きらきらロマン,Chocoiro Kirakira Romance
 あそ→と♡ちよこれいと,Assort Chiyocolate
 かきまぜたら＊ミルク,Kakimazetara Milk
@@ -149,6 +151,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 グッド・ラック・ボール,Good Luck Ball
 百色ふぉとぐらふ,Hyakuiro Photograph
 をとめ大学,"Otome Daigaku"
+をとめ辞典,"Otome Jiten"
 虹待ちレインドロップ,Nijimachi Raindrop
 紅いろは、白,"Beni Iroha, Shiro"
 スタンド・バイ,"Stand by"
@@ -196,14 +199,17 @@ prince×princess,"prince x princess"
 娘・娘・謹・賀,"Joujou Kinga"
 我・思・君・思,"Gashi Kunshi"
 潜・潜・夏・娘,"Senzen Kajou"
+奇・綺・甘・甘,"Kiki Ama'ama"
 ヒーローインザパーク,Hero in the Park
 鉄板★絶品★海の家,Teppan Zeppin Umi no Ie
 雨のち、マイヒーロー,"Ame no chi, My Hero"
 放課後★肝試しパニック,Houkago Kimodameshi Panic
 桜餅マスター……？,Sakuramochi Master...?
 紅蘭偉魔空珠に挑め！,CLIMAX ni Idome!
+おあがり←くらいまっくす,"O'Agari Climax"
 未知なるFROZEN,Michinaru FROZEN
 スリープオーバーベイビー,"Sleepover Baby"
+坂道だらけのこの街で,"Sakamichidarake no Kono Machi de"
 ふれんど日和,Furendo Biyori
 凛世夕町物語,Rinze Yuumachi Monogatari
 常夏CLIMAX,"Tokonatsu CLIMAX"
