--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -194,7 +194,7 @@ SIDE：K,"SIDE:K"
 prince×princess,"prince x princess"
 "ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
 賑やか四畳半,"Nigiyaka Yojouhan"
-プレゼントなら両手いっぱい,Present nara Katate Ippai
+プレゼントなら両手いっぱい,Present nara Ryoute Ippai
 霧・霧・奇・譚,Kiri Kiri Ki Tan
 娘・娘・謹・賀,"Joujou Kinga"
 我・思・君・思,"Gashi Kunshi"
